--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,5 @@
 	// Use IntelliSense to learn about possible attributes.
 	// Hover to view descriptions of existing attributes.
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "Python: Current File",
-			"type": "python",
-			"request": "launch",
-			"program": "${file}",
-			"console": "internalConsole",
-			"internalConsoleOptions": "openOnSessionStart"
-		}
-	]
+	"version": "0.2.0"
 }
